--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,18 @@
-.App {
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.App form input{
+  width: 70px;
+  height: 4vh;
+  font-size: large;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -13,26 +21,11 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#box-tester{
+  width: 30vw;
+  height: 30vw;
+  border: 3px solid;
+  border-color: black;
+  margin-top: 30px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
